--- a/_posts/2023-05-01-blog2.md
+++ b/_posts/2023-05-01-blog2.md
@@ -5,7 +5,7 @@ date: 2023-05-01
 categories: [data visualization, Oscars]
 ---
 
-下面是一个来自 Tableau 的可视化图表，展示了哪些国家的演员和导演在奥斯卡颁奖典礼上获得了最多的奖项。
+Below is a visual chart from Tableau showing which countries' actors and directors have won the most awards at the Oscars.
 
 <div class='tableauPlaceholder' id='viz1682923720080' style='position: relative'>
   <noscript>
@@ -35,7 +35,7 @@ categories: [data visualization, Oscars]
 <script type='text/javascript'>                    
   var divElement = document.getElementById('viz1682923720080');                    
   var vizElement = divElement.getElementsByTagName('object')[0];                    
-  vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    
+  vizElement.style.width='135%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    
   var scriptElement = document.createElement('script');                    
   scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
   vizElement.parentNode.insertBefore(scriptElement, vizElement);                
