--- a/_posts/2023-05-01-Blog1.md
+++ b/_posts/2023-05-01-Blog1.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "NINE DECADES OF THE OSCARS"
+post-image: /assets/img/ninedecade.png
 date: 2023-05-01
 categories: [data visualization, Oscars]
 ---
@@ -38,7 +39,7 @@ categories: [data visualization, Oscars]
     <script type='text/javascript'>                    
       var divElement = document.getElementById('viz1682351170434');                    
       var vizElement = divElement.getElementsByTagName('object')[0];                    
-      vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    
+      vizElement.style.width='140%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    
       var scriptElement = document.createElement('script');                    
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
       vizElement.parentNode.insertBefore(scriptElement, vizElement);                
