--- a/_posts/2023-05-01-Blog1.md
+++ b/_posts/2023-05-01-Blog1.md
@@ -1,9 +1,12 @@
 ---
+title: NINE DECADES OF THE OSCARS
 layout: post
-title: "NINE DECADES OF THE OSCARS"
-post-image: /assets/img/ninedecade.png
-date: 2023-05-01
-categories: [data visualization, Oscars]
+post-image: https://github.com/gy5630/HUMA5630.github.io/nine%20decades%20table.png
+description: NINE DECADES OF THE OSCARS
+tags:
+- sample
+- post
+- test
 ---
 
 <!DOCTYPE html>
