--- a/_posts/2023-05-01-Blog1.md
+++ b/_posts/2023-05-01-Blog1.md
@@ -1,7 +1,7 @@
 ---
 title: NINE DECADES OF THE OSCARS
 layout: post
-post-image: https://github.com/gy5630/HUMA5630.github.io/nine%20decades%20table.png
+post-image: https://github.com/gy5630/HUMA5630.github.io/blob/master/assets/images/ninedecade.png
 description: NINE DECADES OF THE OSCARS
 tags:
 - sample
