--- a/_posts/2023-05-01-Blog1.md
+++ b/_posts/2023-05-01-Blog1.md
@@ -1,13 +1,16 @@
 ---
 title: NINE DECADES OF THE OSCARS
 layout: post
-post-image: https://github.com/gy5630/HUMA5630.github.io/blob/master/assets/images/ninedecade.png
+post-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/ninedecade.png
 description: NINE DECADES OF THE OSCARS
 tags:
-- sample
-- post
-- test
+- The Oscars
+- data visulizatuon
+- racial
 ---
+Below is an interactive table made with tableau showing the racial distribution of the winners of the five Oscar categories (Best Actor, Best Actress, Best
+Director, Best Supporting Actor, Best Supporting Actress) from 1927 to 2023. You can filter the race you want to see or tap the colour block to see the specific
+award information.
 
 <!DOCTYPE html>
 <html>
