--- a/_posts/2023-05-01-Blog3.md
+++ b/_posts/2023-05-01-Blog3.md
@@ -1,12 +1,16 @@
 ---
-title: Introduction and Comment video about Oscar
+title: Storymap and Timeline about Oscar
 layout: post
-description: This blog post contains a video introducing and commenting on Oscar, as well as a story map showcasing its history.
+post-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/timeline.png
+description: Storymap and Timeline about Oscar
 tags:
 - Oscar
 - video
 - story map
+- timeline
+- nationality interactive map
 ---
+This page contains videos introducing and commenting on the Oscars, as well as a story map, timeline and nationality map, so you can get a clear picture of the history and information about the non-white Oscar winners.
 
 <div style="width: 135%; overflow-x: hidden;">
   <iframe src="https://storymaps.arcgis.com/stories/7e448e88453b457fb855433eae88bc07" width="135%" height="650px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
