--- a/_posts/2023-05-01-blog2.md
+++ b/_posts/2023-05-01-blog2.md
@@ -1,11 +1,15 @@
 ---
+post-image: https://raw.githubusercontent.com/gy5630/HUMA5630.github.io/master/assets/images/countrymap.png
+title: Which Countries Come Out on Top?
 layout: post
-title: "Acting and Directing Oscars: Which Countries Come Out on Top?"
-date: 2023-05-01
-categories: [data visualization, Oscars]
+description: Which Countries Come Out on Top?
+tags:
+- The Oscars
+- data visulization
+- world map
 ---
 
-Below is a visual chart from Tableau showing which countries' actors and directors have won the most awards at the Oscars.
+Below is a visual world map from Tableau showing which countries' actors and directors have won the most awards at the Oscars.
 
 <div class='tableauPlaceholder' id='viz1682923720080' style='position: relative'>
   <noscript>
